--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -38,7 +38,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-compat:28.0.0'
-    api 'com.github.barteksc:pdfium-android:1.9.0'
+    implementation 'com.github.ahoikapptn-dev:PdfiumAndroid:master-SNAPSHOT'
 }
 
 apply from: 'bintray.gradle'
