--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:support-compat:28.0.0'
+    // fork that allows user to convert screen position to page position
     api 'com.github.ahoikapptn-dev:PdfiumAndroid:master-SNAPSHOT'
 }
 
